# bc_libero

./: .gitignore  README.md  pyproject.toml
BC-TMEE/documents/: USAGE.md
BC-TMEE/libero_exp/algos/: base.py  bc_mee_policy.py
BC-TMEE/libero_exp/configs/base/algo/: bc_mee_policy.yaml
BC-TMEE/libero_exp/configs/base/data/: default.yaml
BC-TMEE/libero_exp/configs/base/env/: default.yaml
BC-TMEE/libero_exp/configs/bc_mee_policy/: dp.yaml  rnn.yaml  transformer.yaml
BC-TMEE/libero_exp/data/: dataset.py  get_dataset.py  trans_image.py
BC-TMEE/libero_exp/models/dp_modules/: difussion_policy_head.py
BC-TMEE/libero_exp/scripts/: main_libero_mee.sh  main_libero_mee_few_shot.sh  main_libero_mee_imbalance.sh  main_libero_mee_noise.sh
BC-TMEE/libero_exp/utils/: results_utils.py
documents/: DOWNLOAD_MODEL.md  INSTALL.md  USAGE.md
launch_scripts/mll/: submit_libero.py  temp_submission.slurm
libero_exp/algos/: __init__.py  base.py  bc_cardpol_policy.py  bc_policy.py
libero_exp/configs/base/algo/: bc_cardpol_policy.yaml
libero_exp/configs/base/data/: default.yaml
libero_exp/configs/base/env/: default.yaml
libero_exp/configs/base/eval/: default.yaml
libero_exp/configs/base/policy/: dp.yaml  mlp_policy.yaml  rnn_policy.yaml  transformer_policy.yaml  vilt_policy.yaml
libero_exp/configs/base/train/: default.yaml
libero_exp/configs/bc_cardpol_policy/: dp.yaml  mlp.yaml  rnn.yaml  transformer.yaml  vilt.yaml
libero_exp/configs/bc_ib_policy/: dp.yaml  mlp.yaml  rnn.yaml  transformer.yaml  vilt.yaml
libero_exp/configs/bc_policy/: dp.yaml  mlp.yaml  rnn.yaml  transformer.yaml  vilt.yaml
libero_exp/data/: dataset.py  get_dataset.py
libero_exp/models/: base_policy.py  bc_diffusion_policy.py  bc_mlp_policy.py  bc_rnn_policy.py  bc_transformer_policy.py  bc_vilt_policy.py
libero_exp/scripts/: cardpol.sh  eval_libero.sh  test_libero.sh
libero_exp/utils/: env_utils.py  record_utils.py
(+1 files in other folders)
