[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bc-ib"
version = "0.1.0"
description = "Information Bottleneck approach for Behavior Cloning (LIBERO experiments)"
readme = "README.md"
requires-python = "==3.8.13"
license = { text = "MIT" }
dependencies = [
    # PyTorch (INSTALL.md §2 — CUDA 11.8)
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    # LIBERO runtime (documents/INSTALL.md §5; third_party/benchmarks/libero/requirements.txt)
    "libero",
    "hydra-core==1.2.0",
    "numpy==1.23.5",
    "wandb>=0.13.1",
    "easydict==1.9",
    "transformers==4.21.1",
    "opencv-python==4.3.0.38",
    "robomimic==0.2.0",
    "einops==0.4.1",
    "thop==0.1.1-2209072238",
    "robosuite==1.4.0",
    "mujoco>=2.3.0,<3.4",
    "bddl==1.0.1",
    "future>=0.18.2",
    "matplotlib>=3.5.3",
    "cloudpickle>=2.1.0",
    "gym==0.23.1",
    "lightning==2.1.0",
    "lightning-utilities==0.9.0",
    "pytorch-lightning==2.1.0",
    "PyOpenGL==3.1.7",
    "PyOpenGL-accelerate==3.1.7",
    "deepspeed",
    "pandas",
    "moviepy==1.0.3",
    # BC-IB libero_exp imports
    "h5py",
    "timm",
    "imageio",
    "tqdm",
    "transforms3d",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["libero_exp*"]

[tool.uv]
override-dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "numpy==1.23.5",
    "gym==0.23.1",
    "opencv-python==4.3.0.38",
]

[tool.uv.sources]
libero = { path = "../LIBERO", editable = true }
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
